--- a/analisa_data_bongkar_muat_pelabuhan.ipynb
+++ b/analisa_data_bongkar_muat_pelabuhan.ipynb
@@ -519,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NB : saat dijalankan pada local notebook, interactive map dapat muncul, namun saat diupload ke github selalu tidak dapat muncul, sehingga untuk sementara saya tampilkan screenshoot dari map yang terbentuk."
+    "NB : saat dijalankan pada local notebook, interactive map dapat muncul, namun saat diupload ke github selalu tidak dapat muncul, sehingga saya tampilkan screenshoot dari map yang terbentuk. Untuk melihat hasil interactive map bisa dilihat di http://nbviewer.jupyter.org/github/ainihanifa/digitalent/blob/master/analisa_data_bongkar_muat_pelabuhan.ipynb"
    ]
   }
  ],
