edit query no terakhir

--- a/Latihan_sql2.ipynb
+++ b/Latihan_sql2.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -642,7 +642,7 @@
        "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -690,7 +690,7 @@
        "0  Atelier graphique      22314.36"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -1103,7 +1103,7 @@
        "[232 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -1151,7 +1151,7 @@
        "0    S18_3233  1985 Toyota Supra"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -1563,7 +1563,7 @@
        "[98 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1580,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -1612,7 +1612,7 @@
        "0  Herkku Gifts            3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1692,18 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "Who are the employees in Boston"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -1759,7 +1748,7 @@
        "4  Mini Gifts Distributors Ltd.  101244.59"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1777,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -1832,7 +1821,7 @@
        "3        10414  On Hold  50806.85"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1850,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -1900,7 +1889,7 @@
        "3   Volvo Model Replicas, Co                   1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1933,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -2328,7 +2317,7 @@
        "[2996 rows x 2 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2345,7 +2334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -2539,7 +2528,7 @@
        "27  1940 Ford Pickup Truck  2003-01-29"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2556,7 +2545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -3013,7 +3002,7 @@
        "[192 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3031,7 +3020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -3058,7 +3047,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3083,7 +3072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -3540,7 +3529,7 @@
        "[110 rows x 3 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3556,7 +3545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -4013,7 +4002,7 @@
        "[500 rows x 3 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4029,7 +4018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -4486,7 +4475,7 @@
        "[407 rows x 3 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4502,7 +4491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -4515,7 +4504,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>quantity</th>\n",
+       "      <th>numOnhold</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -4528,21 +4517,99 @@
        "</div>"
       ],
       "text/plain": [
-       "   quantity\n",
-       "0        44"
+       "   numOnhold\n",
+       "0         44"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# What is the quantity on hand for products listed on 'On Hold' orders?\n",
+    "#number of on hold orders\n",
     "run(\"\"\"\n",
-    "SELECT COUNT(p.productCode) as quantity\n",
+    "SELECT COUNT(p.productCode) as numOnhold\n",
     "FROM products p, orderdetails od, orders o\n",
     "WHERE od.productCode = p.productCode AND o.orderNumber = od.orderNumber AND o.status = 'On Hold'\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>productName</th>\n",
+       "      <th>totalQuantityOrdered</th>\n",
+       "      <th>quantityInStock</th>\n",
+       "      <th>status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1962 LanciaA Delta 16V</td>\n",
+       "      <td>217.0</td>\n",
+       "      <td>6791</td>\n",
+       "      <td>On Hold</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>P-51-D Mustang</td>\n",
+       "      <td>597.0</td>\n",
+       "      <td>992</td>\n",
+       "      <td>On Hold</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1965 Aston Martin DB5</td>\n",
+       "      <td>571.0</td>\n",
+       "      <td>9042</td>\n",
+       "      <td>On Hold</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1972 Alfa Romeo GTA</td>\n",
+       "      <td>609.0</td>\n",
+       "      <td>3252</td>\n",
+       "      <td>On Hold</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              productName  totalQuantityOrdered  quantityInStock   status\n",
+       "0  1962 LanciaA Delta 16V                 217.0             6791  On Hold\n",
+       "1          P-51-D Mustang                 597.0              992  On Hold\n",
+       "2   1965 Aston Martin DB5                 571.0             9042  On Hold\n",
+       "3     1972 Alfa Romeo GTA                 609.0             3252  On Hold"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The quantity on hand for products listed on 'On Hold' orders\n",
+    "run(\"\"\"\n",
+    "SELECT p.productName,SUM(od.quantityOrdered) as totalQuantityOrdered, p.quantityInStock, o.status\n",
+    "FROM products p, orderdetails od, orders o\n",
+    "WHERE od.productCode = p.productCode AND o.orderNumber = od.orderNumber AND o.status = 'On Hold'\n",
+    "GROUP BY od.orderNumber\n",
     "\"\"\")"
    ]
   },
